--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
-.background-image {
-  width: 100%;
-  height: 100%;
-}
 
 .social {
-    position:fixed;
+    position: fixed;
     cursor: pointer;
     font-size:24px;
     color:darkgray;
@@ -17,10 +13,15 @@
     text-decoration: none;
 }
 
+.div3 {
+  width: 3000px;
+  background: white;
+}
+
 /*obesity legend*/
-.legend1 {
+.storymap-legend {
     line-height: 16px;
-    width: 170px;
+    width: 300px;
     color: #333333;
     padding: 6px 8px;
     background: white;
@@ -30,7 +31,7 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
-.legend1 i {
+.storymap-legend i {
     width: 16px;
     height: 16px;
     float: left;
@@ -38,59 +39,13 @@
     opacity: 0.9;
 }
 
-.legend1 img {
-    width: 16px;
-    height: 16px;
-    margin-right: 3px;
-    float: left;
-}
-
-.legend1 p {
-    font-size: 12px;
+.storymap-legend p {
+    font-size: 30px;
     line-height: 16px;
     margin: 0;
 }
 
-.legend1 b {
-  font-size: 16px;
-  float: center;
-}
-
-/*exercise legend*/
-.legend2 {
-    line-height: 16px;
-    width: 170px;
-    color: #333333;
-    padding: 6px 8px;
-    background: white;
-    background: rgba(255,255,255,0.5);
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
-    font-family: 'Ubuntu', sans-serif;
-}
-
-.legend2 i {
-    width: 16px;
-    height: 16px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.9;
-}
-
-.legend2 img {
-    width: 16px;
-    height: 16px;
-    margin-right: 3px;
-    float: left;
-}
-
-.legend2 p {
-    font-size: 12px;
-    line-height: 16px;
-    margin: 0;
-}
-
-.legend2 b {
+.storymap-legend b {
   font-size: 16px;
   float: center;
 }
